# ive-got-the-power-cpp-template

./: CMakeLists.txt  README.md  main.cpp
src/: power.cpp  power.hpp
tests/: power_test.cpp
